crates/ruff_python_parser/tests/snapshots/invalid_syntax@parenthesized_kwarg_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/parenthesized_kwarg_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            30,
        ),
        range: 0..77,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 43..51,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                8,
                            ),
                            range: 43..51,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        1,
                                    ),
                                    range: 43..44,
                                    id: Name("f"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 44..51,
                                node_index: NodeIndex(
                                    7,
                                ),
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 45..50,
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        arg: Some(
                                            Identifier {
                                                id: Name("a"),
                                                range: 46..47,
                                                node_index: NodeIndex(
                                                    4,
                                                ),
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    5,
                                                ),
                                                range: 49..50,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        19,
                    ),
                    range: 52..62,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                18,
                            ),
                            range: 52..62,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        11,
                                    ),
                                    range: 52..53,
                                    id: Name("f"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 53..62,
                                node_index: NodeIndex(
                                    17,
                                ),
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 54..61,
                                        node_index: NodeIndex(
                                            16,
                                        ),
                                        arg: Some(
                                            Identifier {
                                                id: Name("a"),
                                                range: 55..56,
                                                node_index: NodeIndex(
                                                    14,
                                                ),
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    15,
                                                ),
                                                range: 60..61,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        29,
                    ),
                    range: 63..76,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(
                                28,
                            ),
                            range: 63..76,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        21,
                                    ),
                                    range: 63..64,
                                    id: Name("f"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 64..76,
                                node_index: NodeIndex(
                                    27,
                                ),
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 66..75,
                                        node_index: NodeIndex(
                                            26,
                                        ),
                                        arg: Some(
                                            Identifier {
                                                id: Name("a"),
                                                range: 68..69,
                                                node_index: NodeIndex(
                                                    24,
                                                ),
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    25,
                                                ),
                                                range: 74..75,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.8"}
2 | f((a)=1)
  |   ^^^ Syntax Error: Cannot use parenthesized keyword argument name on Python 3.8 (syntax was removed in Python 3.8)
3 | f((a) = 1)
4 | f( ( a ) = 1)
  |


  |
1 | # parse_options: {"target-version": "3.8"}
2 | f((a)=1)
3 | f((a) = 1)
  |   ^^^ Syntax Error: Cannot use parenthesized keyword argument name on Python 3.8 (syntax was removed in Python 3.8)
4 | f( ( a ) = 1)
  |


  |
2 | f((a)=1)
3 | f((a) = 1)
4 | f( ( a ) = 1)
  |    ^^^^^ Syntax Error: Cannot use parenthesized keyword argument name on Python 3.8 (syntax was removed in Python 3.8)
  |
